Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8304

libcfs_debug_dumplog calls potentially sleeping function in wrong state

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      libcfs_debug_dumplog() sets task state to INTERRUPTIBLE and then calls kthread_run() that might sleep.

      It's mostly harmless here, but still should be avoided as the kernel prints a nastygram about it when it happens.

      I guess just moving the state setting to after kthread_run call is all that's needed.

            green Oleg Drokin
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: