LU-8304 libcfs: Do not call kthread_run in wrong state

kthread_run might sleep during an allocation, and so
it's considered unsafe to call with a state that's not
RUNNABLE.
Move the state setting to after kthread_run call.

Change-Id: I8d0694402990e6f688a0d1dfe8597ffe45c18962
Signed-off-by: Oleg Drokin <oleg.drokin@intel.com>